# slack-message-analysis

./: .gitignore  README.md  make_team_report.py  mes.csv  pyproject.toml  slack_analysis.py  team_master.csv
dummydata/: mes.csv  team_master.csv
lib/: calc_monthly_team.py
output/: MonthlyTeam.csv
slack_message_analysis/: cli.py  collect.py  common.py  leaderboard.py  models.py  team.py  wordcloud.py
